Add Contact Us link to global navigation.
Place this on its own page and under the Help section along
with the legal information pages to keep the information
architecture consistent and to follow our guidelines about
link labels and destinations matching. (#355)

--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -17,10 +17,10 @@
                     <ul id="footer-nav" class="sections">
                         {% include "gobotany/_primary_navigation.html" %}
                     </ul>
-                    <h6>Legal</h6>
-                    <ul class="legal">
+                    <ul class="prime-items">
                         <li>{% nav_item 'Privacy Policy' site-privacy %}</li>
                         <li>{% nav_item 'Terms of Use' site-terms-of-use %}</li>
+                        <li>{% nav_item 'Contact Us' site-contact %}</li>
                     </ul>
                 </div>
                 <div class="support">
