--- a/gobotany/site/templates/gobotany/_help_navigation.html
+++ b/gobotany/site/templates/gobotany/_help_navigation.html
@@ -26,3 +26,12 @@
     <div class="section contributors">
         <h4>{% nav_item 'Contributors' site-contributors %}</h4>
     </div>
+    <div class="section privacy">
+        <h4>{% nav_item 'Privacy Policy' site-privacy %}</h4>
+    </div>
+    <div class="section terms-of-use">
+        <h4>{% nav_item 'Terms of Use' site-terms-of-use %}</h4>
+    </div>
+    <div class="section contact">
+        <h4>{% nav_item 'Contact Us' site-contact %}</h4>
+    </div>
