--- a/gobotany/site/templates/gobotany/help_dkey.html
+++ b/gobotany/site/templates/gobotany/help_dkey.html
@@ -6,7 +6,7 @@
     require(['site/help']);
 {% endblock %}
 
-{% block body_attributes %}id="dkey" class="help"{% endblock %}
+{% block body_attributes %}id="dkey-help" class="help"{% endblock %}
 
 {% block main_content %}
 
