--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -242,12 +242,12 @@ $search-suggest-menu-top: 83px;
                     content: ":";
                 }
             }
-            > h6:nth-of-type(2), > ul.legal {
+            > h6:nth-of-type(2), > ul.prime-items {
                 display: inline-block;
                 margin-left: 72px;
                 margin-top: 12px;
             }
-            .legal {
+            .prime-items {
                 li {
                     margin-right: 32px;
                 }
