Clean up text labels a little (#356).

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -31,8 +31,8 @@
             {{ form.longitude.as_hidden }}
         </fieldset>
 
-        <p>Add image(s) to sighting</p> 
-        <p><a id="upload-link" href="#">Upload Image(s)+</a></p>
+        <p>Add images to sighting</p> 
+        <p><a id="upload-link" href="#">+ Upload Image</a></p>
         <div id="sighting-photos">
             <input type="hidden" name="__template__sightings_photos" class="template-photo"></input>
         </div>
