--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -24,21 +24,7 @@
 </div>
 
 <div class="modal-container">
-  <div class="image-modal">
-      <a href="#" class="close">close</a>
-      <img src="/static/images/icons/no-image.png" alt="photo image">
-      <h4>Upload Image</h4>
-      <form id="upload-photo-form" method="POST" 
-          action="{% url ps-ajax-image-upload %}">
-          {% csrf_token %}
-          {{ upload_photo_form.image }}
-          <div style="display: none;">{{ upload_photo_form.image_type }}</div>
-          <div class="screening-notify">
-              <p>All images are screened by Plantshare Staff before being displayed publically.</p>
-          </div>
-          <input type="submit" id="upload-photo-submit" class="save-btn">
-      </form>
-  </div>
+  {% include "_image_upload_form.html" with image_form=upload_photo_form %}
 </div>
 
 <form method="post" action="{% url ps-sightings %}">
