--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -10,21 +10,7 @@
 <h2>My Info</h2>
 
 <div class="section-container">
-  <div class="image-modal">
-      <a href="#" class="close">close</a>
-      <img src="/static/images/icons/no-image.png" alt="avatar image">
-      <h4>Upload Image</h4>
-      <form id="upload-avatar-form" method="POST" 
-          action="{% url ps-ajax-image-upload %}">
-          {% csrf_token %}
-          {{ avatar_form.image }}
-          <div style="display: none;">{{ avatar_form.image_type }}</div>
-          <div class="screening-notify">
-              <p>All images are screened by Plantshare Staff before being displayed publically.</p>
-          </div>
-          <input type="submit" id="upload-photo-submit" class="save-btn">
-      </form>
-  </div>
+  {% include "_image_upload_form.html" with image_form=avatar_form %}
 
   <form id="edit-profile-form" class="ajax-partial" method="POST" action="{% url ps-ajax-profile-edit %}">
     <section class="info-section">
