--- a/gobotany/plantshare/templates/_image_upload_form.html
+++ b/gobotany/plantshare/templates/_image_upload_form.html
@@ -8,7 +8,7 @@
         {{ image_form.image }}
         <div style="display: none;">{{ image_form.image_type }}</div>
         <div class="screening-notify">
-            <p>All images are screened by Plantshare Staff before being displayed publically.</p>
+            <p>All images are screened by Plantshare Staff before being displayed publicly.</p>
         </div>
         <input type="submit" id="upload-image-submit" class="save-btn">
     </form>
