Add an overlay for the upload dialog (#356)

--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -19,7 +19,7 @@
           <div class="avatar">
               <img id="avatar-image" src="{{ profile_form.avatar.thumb_url }}" alt="">
               <p>
-                  <a id="upload-link" href="#">Upload Photo</a>
+                  <a id="upload-link" href="#" rel=".image-modal">Upload Photo</a>
               </p>
           </div>
           <table>
