--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -32,7 +32,7 @@
         </fieldset>
 
         <p>Add images to sighting</p> 
-        <p><a id="upload-link" href="#">+ Upload Image</a></p>
+        <p><a id="upload-link" href="#" rel=".image-modal">+ Upload Image</a></p>
         <div id="sighting-photos">
             <input type="hidden" name="__template__sightings_photos" class="template-photo"></input>
         </div>
