Re-style the image upload modal dialog. (#356)
Drop the browser-default file input box in favor of our own custom look
and feel, and just tie our button to the file input, and have our own
file name label updated when the file input changes.  Make sure the file
name display has plenty of space for long filenames.

--- a/gobotany/plantshare/templates/_image_upload_form.html
+++ b/gobotany/plantshare/templates/_image_upload_form.html
@@ -5,11 +5,18 @@
     <form id="upload-image-form" method="POST" 
         action="{% url ps-ajax-image-upload %}">
         {% csrf_token %}
-        {{ image_form.image }}
-        <div style="display: none;">{{ image_form.image_type }}</div>
         <div class="screening-notify">
             <p>All images are screened by Plantshare Staff before being displayed publicly.</p>
         </div>
-        <input type="submit" id="upload-image-submit" class="save-btn">
+        <div style="display: none;">
+            {{ image_form.image }}
+            {{ image_form.image_type }}
+        </div>
+        <a class="button file-select">CHOOSE FILE</a>
+        <a class="button disabled" id="upload-image-submit">UPLOAD</a>
     </form>
+    <div class="modal-footer">
+        File:
+        <div class="file-path">None Selected</div>
+    </div>
 </div>
