--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1,5 +1,7 @@
 /* PlantShare */
 
+@import "_mixins";
+
 $form-field-padding: 5px;
 $form-field-width: 350px;
 $plantshare-main-column-width: 475px;
@@ -435,14 +437,40 @@ body.plantshare {
                 padding: 15px;
                 position: absolute;
                 width: 400px;
-                height: 150px;
-                top: 35px;
-                left: 20px;
+                height: 160px;
                 z-index: 10;
 
                 img {
                     float: left;
                     margin: 0 20px 10px 0;
+                    max-height: 84px;
+                    max-width: 84px;
+                }
+
+                a.button {
+                    @extend .orange-button;
+                    display: inline-block;
+                    color: white;
+                    margin: 10px 0;
+                }
+
+                a.disabled {
+                    display: none;
+                }
+
+                div.modal-footer {
+                    display: block;
+                    position: relative;
+                    float: left;
+                    width: 100%;
+                    color: #888;
+
+                    div.file-path {
+                        margin: 2px 0 auto;
+                        border: 1px solid #888;
+                        padding: 2px;
+                        color: #888;
+                    }
                 }
 
                 a.close {
@@ -457,7 +485,7 @@ body.plantshare {
                 }
 
                 h4 {
-                    margin: 0 0 15px;
+                    margin: 0 0 5px;
                     font-size: 18px;
                 }
 
