--- a/gobotany/editor/templates/gobotany/edit_pile_length.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_length.html
@@ -45,10 +45,12 @@
     {% else %}
       {% with taxon=thing min=minmax.0 max=minmax.1 %}
       <div><i>{{ taxon.scientific_name }}</i>
-        <b>Min
-        <input {% if not min %}class="empty" {% endif %}value={{ min }}></b>
-        <b>Max
-        <input {% if not max %}class="empty" {% endif %}value={{ max }}></b>
+        <b>Min<input
+          {% if min == None %}class="empty"{% else %}value={{ min }}{% endif %}
+        ></b>
+        <b>Max<input
+          {% if max == None %}class="empty"{% else %}value={{ max }}{% endif %}
+        ></b>
         {{ character.unit }}
       </div>
       {% endwith %}
