Move values in an expanded edit row out of the way #361
Before, the first value displayed in a diagonally-expanded list of
previously collapsed values on the edit page would overlap with any
tags near the end of the row, like "!" or "changed".  Now, we have
pushed all of the values down one line so that the tags never get
overlaid and therefore never overlap visually with the value texts.

--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -19,8 +19,8 @@ span.all-species-button, span.simple-key-button, .save-button { cursor: pointer;
 .pile-character-grid div:hover { background-color: #fafae9; }
 .pile-character-grid div:hover.expanded { background-color: transparent; }
 .pile-character-grid span { margin: 0px 2px; background-color: #dc9402; padding: 2px 8px 4px; vertical-align: 2px; color: white; font-size: 0.8em; }
-.pile-character-grid i { position: relative; display: inline-block; width: 20em; }
-.pile-character-grid i .expand-button { cursor: pointer; position: absolute; right: 2px; top: -2px; font-style: normal; }
+.pile-character-grid i { position: relative; display: inline-block; width: 20em; padding: 4px 0px; }
+.pile-character-grid i .expand-button { cursor: pointer; position: absolute; right: 2px; top: 2px; font-style: normal; }
 .pile-character-grid b { cursor: pointer; display: inline-block; padding: 4px 2px; font-weight: normal; }
 .pile-character-grid b.x { background-color: #519136; color: white; }
 .pile-character-grid b.highlight { z-index: 2; background-color: #fafae9; }
