Add some margin between images for a sighting (#356)

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -265,6 +265,13 @@ body.plantshare {
             margin-bottom: $section-padding;
             padding: 5px $section-padding;
         }
+
+        .thumb-gallery {
+            .thumb {
+                margin: 0 5px;
+                vertical-align: bottom;
+            }
+        }
     }
     &#locator {
         h3 {
