Hide the photos/list tabs and related link on small screens. (#308)

--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1061,6 +1061,9 @@ ul.get-more-questions-menu {
             .section + .section {
                 margin-bottom: 16px;
             }
+            #results-tabs, p.list-all {
+                display: none;
+            }
         }
     }
 }
