Hide the Need Help label on small screens. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -150,7 +150,7 @@
                 </div>
 
 
-                <div class="section">
+                <div class="section family-genus">
                     <div class="already-know">
                         <h6>Already know the family or genus?</h6>
                         <label>Family:</label>
@@ -178,7 +178,7 @@
                     <div class="clearit"></div>
                 </div>
         
-                <div class="section">
+                <div class="section help">
                     <h5 class="left help last">Need Help?</h5>
                     <a href="{% url site-getting-started %}"
                         class="get-help-btn left">Get Help</a>
