Hide the Start Over label on small screens. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
         
-                <div class="section">
+                <div class="section clear">
                     <h5 class="left help">Start Over:</h5>
                     <a class="clear-all-btn left">Clear All</a>
                     <div class="clearit"></div>
