--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -881,7 +881,10 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #sidebar .scroll + .section { margin: 0 0 32px; }
   body.skey.results h3.species-count-heading { white-space: nowrap; }
   body.skey.results .section + .section { margin-bottom: 16px; }
-  body.skey.results #results-tabs, body.skey.results p.list-all, body.skey.results #sidebar .section.help h5, body.skey.results #sidebar .section.clear h5 { display: none; } }
+  body.skey.results #results-tabs, body.skey.results p.list-all, body.skey.results #sidebar .section.help h5, body.skey.results #sidebar .section.clear h5 { display: none; }
+  body.skey.results #page-head { left: 8px; position: absolute; }
+  body.skey.results #page-head h1 { display: none; }
+  body.skey.results #sidebar, body.skey.results #results-display { margin-top: 55px; } }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { body.skey.results #sidebar ul.option-list li:hover { background: #fff; /* No hover color */ }
   body.skey.results #sidebar ul.option-list li.active:hover { background: #dce890; /* Except active-filter hover color */ } }
