--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -26,6 +26,7 @@ span.all-species-button, span.simple-key-button, .save-button { cursor: pointer;
 .pile-character-grid b.highlight { z-index: 2; background-color: #fafae9; }
 .pile-character-grid b.highlight.x { background-color: #3c6c28; }
 .pile-character-grid b.changed { border-style: solid; border-color: #dc9402; border-width: 4px 2px; padding: 0; }
+.pile-character-grid input { margin: 4px 2px; }
 .pile-character-grid input.empty { background-color: #e6e697; }
 .pile-character-grid input.illegal { background-color: #fdb014; }
 
