Make the questions list narrower on small screens. (#308)

--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1075,6 +1075,16 @@ ul.get-more-questions-menu {
             #sidebar, #results-display {
                 margin-top: 55px;
             }
+            #sidebar {
+                font-size: 10px;
+                width: 139px;
+                .scroll {
+                    width: 140px;
+                }
+            }
+            #main {
+                width: 800px;
+            }
         }
     }
 }
