Show thumbnails in a single column for small-screen portrait view. (#308)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -889,7 +889,9 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #sidebar { font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 10px; width: 130px; }
   body.skey.results #sidebar .section.instructions h5 { font-size: 12px; }
   body.skey.results #sidebar .scroll { width: 130px; }
-  body.skey.results #main { width: 812px; } }
+  body.skey.results #main { width: 812px; }
+  body.skey.results .plant-list { height: auto !important; }
+  body.skey.results .plant-list .plant { position: static; } }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { body.skey.results #sidebar ul.option-list li:hover { background: #fff; /* No hover color */ }
   body.skey.results #sidebar ul.option-list li.active:hover { background: #dce890; /* Except active-filter hover color */ } }
